FIX: label is now visible on "tabs w/ label"
Test Plan: confirm label visibility

Reviewers: rjmackay

Differential Revision: https://phabricator.ushahidi.com/D867

--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -4114,6 +4114,7 @@ ul.breadcrumb + h1 {
     width: 45%; }
     @media screen and (min-width: 48em)  {
       .tabs-menu .tabs-menu-list {
+        display: inline;
         border: 0;
         padding: 0;
         width: 100%; } }
