--- a/assets/sass/3_modules/_tabs.scss
+++ b/assets/sass/3_modules/_tabs.scss
@@ -4,7 +4,7 @@
     float: left;
 
     @include media($small) {
-        width: 100%; 
+        width: 100%;
         padding: 0;
     }
 
@@ -27,6 +27,7 @@
         width: 45%;
 
         @include media($small) {
+            display: inline;
              border: 0;
              padding: 0;
              width: 100%;
